# USTB-SSO

./: .gitignore  README.md
USTB-SSO-Dart/ustb_sso/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
USTB-SSO-Dart/ustb_sso/example/: demo.dart
USTB-SSO-Dart/ustb_sso/lib/: ustb_sso.dart
USTB-SSO-Dart/ustb_sso/lib/src/: captcha.dart  data.dart  exceptions.dart  prefabs.dart  procedure.dart  sessions.dart
USTB-SSO-Dart/ustb_sso/test/: captcha_test.dart  server_test.dart
USTB-SSO-Py/: CHANGELOG.md  README.md  pyproject.toml
USTB-SSO-Py/tests/: test_httpx.py
USTB-SSO-Py/ustb_sso/: __init__.py  _auth_session.py  _data.py  _exceptions.py  _prefabs.py  _procedure.py  _sessions.py
docs/: USTB-SSO.md
